debathena-libathdir (10.0.1-0debathena1) unstable; urgency=low

  * Update our autogoo for the 21st century.
  * Generate aclocal.m4 ourselves instead of copying in the standard
    Athena aclocal.m4. (Trac: #334)
  * Bump debhelper compatibility.

 -- Evan Broder <broder@mit.edu>  Wed, 28 Apr 2010 14:58:03 -0400

debathena-libathdir (10.0.0-0debathena2) unstable; urgency=low

  * Export ATHENA_SYS and ATHENA_HOSTTYPE at build time, to make sure that
    athdir has the correct compile-time constants built-in. (Trac: #570)

 -- Evan Broder <broder@mit.edu>  Wed, 28 Apr 2010 13:23:11 -0400

debathena-libathdir (10.0.0-0debathena1) unstable; urgency=low

  * Change DEB_AUTO_UPDATE_AUTOCONF to 2.50, not 1.
  * Remove DEB_AUTO_UPDATE_DEBIAN_CONTROL.
  * Change "Debian-Athena Project" to "Debathena Project".
  * Remove debian/control from version control.
  * Clean up debian/copyright.

 -- Tim Abbott <tabbott@mit.edu>  Sat, 24 Jan 2009 15:23:36 -0500

debathena-libathdir (9.4.0+cvs20050915-0debathena3) unstable; urgency=low

  * Fix conflicts/replaces.

 -- Anders Kaseorg <andersk@mit.edu>  Mon, 06 Aug 2007 02:32:10 -0400

debathena-libathdir (9.4.0+cvs20050915-0debathena2) unstable; urgency=low

  * Section: debathena/libs.

 -- Anders Kaseorg <andersk@mit.edu>  Tue, 17 Jul 2007 06:33:48 -0400

debathena-libathdir (9.4.0+cvs20050915-0debathena1) unstable; urgency=low

  * Initial release.

 -- Anders Kaseorg <andersk@mit.edu>  Mon, 29 Jan 2007 23:57:37 -0500