@@ -4,7 +4,7 @@ AC_CONFIG_SRCDIR([athdir.c])
 
 AC_PROG_CC
 AC_PROG_INSTALL
-AC_PROG_RANLIB
+AC_PROG_LIBTOOL
 AC_PROG_MKDIR_P
 
 AC_DEFINE_UNQUOTED([ATHSYS], ["$ATHENA_SYS"])
