@@ -1,0 +1,4 @@
+usr/include
+usr/lib/libathdir.so
+usr/lib/libathdir.la
+usr/lib/libathdir.a
