@@ -2,9 +2,12 @@
 
 DEB_AUTO_UPDATE_AUTOCONF = 2.50
 DEB_AUTO_UPDATE_ACLOCAL = 1.9
+DEB_AUTO_UPDATE_LIBTOOL = pre
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
+
+DEB_DH_INSTALL_SOURCEDIR = $(DEB_DESTDIR)
 
 debian/stamp-autotools-files: aclocal.m4 install-sh missing
 aclocal.m4:
@@ -16,4 +19,4 @@ export ATHENA_SYS=$(shell machtype -S)
 export ATHENA_HOSTTYPE=$(shell machtype)
 
 clean::
-	rm -f configure aclocal.m4 install-sh missing
+	rm -f configure aclocal.m4 install-sh missing libtool ltmain.sh config.guess config.sub
